UI Fix: Horizontal Scrollbar fix for different show values.

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -188,3 +188,9 @@ width: 5%;
   line-height: 1.3;
 }
 
+@include media-breakpoint-up(sm) {
+  .ngx-datatable.scroll-vertical .datatable-body {
+    overflow-x: hidden;
+  }
+}
+
